--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -63,6 +63,7 @@ endforeach ()
 
 if (${REST_G4} MATCHES ON)
     set(RESTLIB_GEANT4 ON)
+    set(REST_GARFIELD ON CACHE BOOL ON)
 endif ()
 
 if (${RESTLIB_DETECTOR} MATCHES ON)
